# aiueos

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
90-docs/adr/: 0001-aiueos-phase0-capability-os.md  0002-host-abi-topic-bus.md  0005-multi-surface-providers.md
docs/: index.html
examples/: system.aiue.edn
examples/apps/: notes.edn
examples/components/: fs-service.edn  log-service.edn
examples/computer/backing/: Dockerfile  README.md  surface.mjs
examples/drivers/: virtio-blk.edn
examples/policy/: default.edn
examples/robot/: actuator.edn  actuator.wat  planner.edn  planner.wat  robot.aiue.edn  sensor.edn  sensor.wat
src/: audit.rs  broker.rs  edn.rs  error.rs  graph.rs  host.rs  lib.rs  manifest.rs  policy.rs  runtime.rs  safe.rs  signing.rs  topic.rs
src/aiueos/: contract.cljc
test/aiueos/: contract_test.cljc
tests/: admit.rs  boot.rs  cli.rs  errors.rs  host_abi.rs  launch.rs  parsing.rs  robot.rs  runtime.rs  signing.rs  system.rs
